syntax = "proto3";
package dkvs.balancer;

option go_package = "github.com/pysel/dkvs/prototypes/balancer";

service BalancerService {
    rpc RegisterPartition(RegisterPartitionRequest) returns (RegisterPartitionResponse) {}
}

message RegisterPartitionRequest {
    string address = 1;
}

message RegisterPartitionResponse {}
