syntax="proto3";
package dkvs.partition;

option go_package = "github.com/pysel/dkvs/prototypes/partition";

message StoredValue {
    bytes value = 1;
    uint64 lamport = 2;
}
